# wuff

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
conformance/: Cargo.toml  build.rs
conformance/src/: capi_shim.cpp  main.rs  prepare.rs  runner.rs
conformance/wpt/woff2/: README.md
old/: buffer.rs  misc.rs  woff2_dec.rs
src/: buffer.rs  decompress.rs  decompress_woff1.rs  decompress_woff2.rs  error.rs  lib.rs  main.rs  parse.rs  table_tags.rs  types.rs  variable_length.rs  woff2_common.rs  woff2_dec.rs
src/woff/: glyf_decoder.rs  headers.rs  hmtx_decoder.rs  mod.rs
wuff/: Cargo.toml  README.md
wuff-capi/: CHANGELOG.md  Cargo.toml  README.md  build.rs
wuff-capi/include/woff2/: decode.h  output.h
wuff-capi/src/: lib.rs
wuff/src/: brotli.rs  decompress_woff1.rs  decompress_woff2.rs  error.rs  lib.rs  main.rs  variable_length.rs
wuff/src/woff/: glyf_decoder.rs  headers.rs  hmtx_decoder.rs  mod.rs
wuff/tests/: duplicate_loca.rs
