[package]
name = "wuff"
version = "0.1.0"
description = "Pure-rust WOFF2 font decoding"
authors = ["Nico Burns <nico@nicoburns.com>"]
license = "MIT"
repository = "https://github.com/nicoburns/wuff"
documentation = "https://docs.rs/wuff"
keywords = ["font", "opentype", "truetype", "woff2"]
categories = ["parsing"]
readme = "README.md"
edition = "2024"
include = [
    "Cargo.toml",
    "README.md",
    "src/*",
]

[features]
default = ["brotli"]
brotli = ["dep:brotli-decompressor"]
font_compression_bin = []
debug = []

[dependencies]
arrayvec = "0.7.6"
bytes = "1.10.1"
font-types = "0.9.0"
brotli-decompressor = { version = "5.0.0", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]