[package]
name = "conformance"
version = "0.1.0"
description = "Conformance test harness comparing the C++ woff2 decoder, the wuff Rust decoder, and the wuff-capi C++ wrapper"
publish = false
edition = "2024"
rust-version = "1.85"

[dependencies]
wuff = { path = "../wuff", default-features = false, features = ["brotli"] }
wuff-capi = { path = "../wuff-capi" }
rayon = "1.10"
ureq = "3.3.0"
tar = "0.4.46"
flate2 = "1.1.9"

[build-dependencies]
cc = "1.2"
